reader() added to SpringBatchConfig